<resources>
    <string name="app_name">AndroidEatIT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Forgot_Password"><u>Forgot Password?</u></string>
    <string name="Facebook_app_id">782651295467125</string>
    <string name="Facebook_login_protocolo_name">fb782651295467125</string>
    <string name="google_maps_key">AIzaSyBHWTUhRCbOLL2Gv2cttYBnkuZQw4f8NVE</string>
    <string name="Account_kits_client_token">48681e3c855d4772e48fa16dcbcf517a</string>
    <string name="IdNameFood">Name of Food</string>
    <string name="txtCheckBoxNew">Suscribe new</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="Menu">Menu</string>
    <string name="MenuCart">Cart</string>
    <string name="MenuOrder">Orders</string>
    <string name="MenuFavo">Favoritos</string>
    <string name="MenuHomeAddress">Home Address</string>
    <string name="MenuUpdateName">Update Name</string>
    <string name="MenuSetting">Setting</string>
    <string name="MenuSignOut">Sign Out</string>
    <string name="txtTotal">Total:</string>
    <string name="txtTotaValor">$00,000</string>
    <string name="btnPlaceOrder">PLACE ORDER</string>
    <string name="nameToolbar">Comida nombre</string>
    <string name="txtNameComida">Nombre de comida</string>
    <string name="txtPrecioComida">1,000</string>
    <string name="DescripcionProducto">Descripcion: </string>
    <string name="btnShow_comment">Show comment</string>
    <string name="txtSlogan">Una manera de satisfacer las ganas de comer</string>
    <string name="btnContinue">Continue</string>
    <string name="edtxHintPhone">Numero de celular</string>
    <string name="edtxPhone">940540453</string>
    <string name="edtxHintPassword">Password</string>
    <string name="edtxPassword">1234</string>
    <string name="checkBoxRemember">Remember me</string>
    <string name="btnSignIn">Sign In</string>
    <string name="edtxHintName">Name</string>
    <string name="edtxHintcode_secure">code secure</string>
    <string name="btnSIGN_UP">SIGN UP</string>
    <string name="txtDELETE">DELETE</string>
    <string name="ItemNameCart">Food 01</string>
    <string name="ItemPrecioCart">100,000</string>
    <string name="txtUser_phone">User phone</string>
    <string name="txtUser_Comment">Comment</string>
    <string name="txtFoodPrice">$100</string>
    <string name="edtxHintHomeAddres">Home Address</string>
    <string name="txtName_of_menu">Name of menu</string>
    <string name="txtNameUser">Jose Guerra</string>
    <string name="edtxHintComment">Comment</string>
    <string name="txtDelivey">Delivery method:</string>
    <string name="RdiBtnToAddress">Ship to this Address</string>
    <string name="RdiBtnHomeAddress">Home Address</string>
    <string name="txtPayment">Payment method:</string>
    <string name="RdiBtnCash">Cash on delivery</string>
    <string name="RdiBtnPaypal">Paypal</string>
    <string name="txtNameOrder">#11111</string>
    <string name="txtStatuOrder">Status</string>
    <string name="txtPhoneOrder">123456789</string>
    <string name="txtAddresOrder">Address</string>
    <string name="txtNameRestaurantes">Name of Restaurants</string>
    <string name="Search">Search</string>

</resources>
