<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        

        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/Menu"  />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/MenuCart" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/MenuOrder"/>


        <item
            android:id="@+id/nav_favo"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/MenuFavo"/>

        <item
            android:id="@+id/nav_HomeAddress"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/MenuHomeAddress"  />

        <item
            android:id="@+id/nav_Update_Name"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/MenuUpdateName" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/MenuSetting"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/MenuSignOut"/>

    </group>



</menu>
