<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    >

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

           <fragment
               android:id="@+id/Id_Place_Autocomplete"
               android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/IdEdtComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtxHintComment"
                android:textColorHint="@color/colorPrimary"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:inputType="textMultiLine"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"

                />

            <TextView
                android:text="@string/txtDelivey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/IdRdiShipToAddress"
                    android:text="@string/RdiBtnToAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <RadioButton
                    android:id="@+id/IdRdiHomeAddress"
                    android:text="@string/RdiBtnHomeAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </RadioGroup>

            <TextView
                android:text="@string/txtPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/IdRdiCashOnDelivery"
                    android:text="@string/RdiBtnCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <RadioButton
                    android:id="@+id/IdRdipaypal"
                    android:text="@string/RdiBtnPaypal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </RadioGroup>

        </LinearLayout>




    </LinearLayout>

</android.support.v7.widget.CardView>