<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/IdPhone"
            android:hint="@string/edtxHintPhone"
            android:textColorHint="@android:color/white"
            android:text="@string/edtxPhone"
            android:drawableEnd="@drawable/ic_phone_black_24dp"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"

            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/IdPassword"
            android:hint="@string/edtxHintPassword"
            android:textColorHint="@android:color/white"
            android:text="@string/edtxPassword"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/ic_https_black_24dp"
            android:textSize="34sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"

            />

      <LinearLayout
          android:weightSum="2"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <com.rey.material.widget.CheckBox
              android:id="@+id/Id_CheckBox_Remember"
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              style="@style/Material.Drawable.CheckBox"
              android:gravity="center_vertical"
              android:text="@string/checkBoxRemember"
              android:textColor="@android:color/white"
              app:cbd_strokeColor="@android:color/white"
              app:cbd_tickColor="@color/colorPrimaryDark"
              />

          <TextView
              android:id="@+id/txtOlvidoPass"
              android:layout_weight="1"
              android:textColor="@android:color/white"
              android:text="@string/Forgot_Password"
              android:layout_width="0dp"
              android:layout_height="wrap_content" />


      </LinearLayout>

    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/IdSignIn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSignIn"
        android:layout_margin="8dp"
        app:fButtonColor="@color/btnSignActivo"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp"
        />
</RelativeLayout>