<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    android:id="@+id/IdrootLayout"
    android:padding="16dp"
    tools:context=".CartActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/Id_Lista_Cart"
        android:background="@android:color/transparent"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/colorPrimary"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/txtTotal"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:id="@+id/Id_Total"
                    android:text="@string/txtTotaValor"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />


            </LinearLayout>

            <info.hoang8f.widget.FButton
                android:id="@+id/IdBtnPlaceOrder"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnPlaceOrder"
                android:layout_margin="8dp"
                app:fButtonColor="@color/btnSignUp"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp"
                app:cornerRadius="4dp"
                />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>