<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    >

    <RelativeLayout
        android:id="@+id/IdRowBackground"
        android:background="@color/bgRowBackground"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

         <ImageView
             android:id="@+id/IdElimarIco"
             android:layout_width="30dp"
             android:src="@drawable/ic_delete_black_24dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_height="30dp"
             tools:ignore="ContentDescription" />

        <TextView
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/IdElimarIco"
            android:text="@string/txtDELETE"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/IdForeground"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Id_Image_cart"
            android:layout_width="70dp"
            android:layout_height="70dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="9"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Id_txtitemnombreCart"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/ItemNameCart"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/Id_txtitemPrecioCart"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:text="@string/ItemPrecioCart"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/Id_btn_quantity"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            app:textSize="12sp"
            app:backGroundColor="@color/colorAccent"
            app:initialNumber="1"
            app:finalNumber="20"

            />

    </LinearLayout>

</android.support.v7.widget.CardView>